--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^7.6.1",
     "react-spinners": "^0.17.0",
     "tailwindcss": "^4.1.7"
